# supermorse-app

./: .gitignore  LICENSE  Prefixes.md  README.md  alphabets.js  build-linux.sh  build-macos.sh  build-windows.ps1  changes.md  check-mongodb.sh  connect-arduino.js  debug.md  fix-mariadb.sh  fix-postgresql.sh  implementation-details.md  install-linux.sh  install-mac.sh  install-windows.bat  main.js  package-lock.json  package.json  preload.js  results-test.txt  results.txt  run-tests.sh  server.js  test-paddle-pins.js  test.txt  troubleshooting-guide.md  uninstall-linux.sh  uninstall-mac.sh
.github/workflows/: main.yml
Screenshots/: murmur_screenshot_update.txt
arduino/: morse_decoder.ino
arduino/morse_decoder/: morse_decoder.ino  morse_decoder_Arduino_Micro.ino  morse_decoder_Arduino_Nano.ino  morse_decoder_Xiao_ESP32-C6.ino  morse_decoder_Xiao_SAMD21.ino
arduino/pin_tester/: pin_tester.ino
beta-release/: GITHUB_RELEASE_INSTRUCTIONS.md  GITLAB_PACKAGE_INSTRUCTIONS.md  README.md
config/: database.js  mumble-server.ini
docs/: mumble-server-setup.md
examples/: Abbreviations.md  amateur_radio_callsigns.txt  example-conversation.md  prefixes.md  q-codes.md  rst-numbers.md
key-emulator/: README.md  morse-learning-program.js  package.json
models/: CharacterProgress.js  Progress.js  Session.js  User.js
murmur-src/: README.md  murmur
public/: index.html
routes/: auth.js  mumble.js  progress.js
supermorse-mumble/: CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  todo-in-the-future.txt
supermorse-mumble/Bandplans/: band_segments.csv
supermorse-mumble/config/: mumble-server.ini
supermorse-mumble/src/database/: Backend.cpp  Backend.h  Database.cpp  MariaDBConnectionParameter.cpp  MariaDBConnectionParameter.h
supermorse-mumble/src/murmur/: CMakeLists.txt  HFBandSimulation.cpp  HFBandSimulation.h  Server.cpp  Server.h  ServerApplication.cpp  ServerApplication.h  main.cpp
tests/: README.md  create-electron-user.js  create-master-user.js  create-simple-user.js  create-test-user.js  end-to-end-registration-test.js  test-create-user.js  test-registration.html  test-user-creation.js  verify-user-creation.js
workers/: json-data-worker.js  serial-port-worker.js  training-analytics-worker.js
(+24 files in other folders)
